Search is implemented

--- a/app/views/rooms/_room.html.haml
+++ b/app/views/rooms/_room.html.haml
@@ -1,2 +1,1 @@
--#=@rooms.each do |room|
-%p "#{room.id} #{room.host_id} #{room.capacity}"
+%p room##{room.id} #{is_available(@start_date, @end_date, room)} (#{room.num_of_bed_booked_in_period(@start_date, @end_date)} booked, #{room.free_in_a_period(@start_date, @end_date)} free out of #{room.capacity} total)
