--- a/app/views/searches/_search_form.html.haml
+++ b/app/views/searches/_search_form.html.haml
@@ -4,4 +4,4 @@
     =form.input :e_date, label: "End date:", as: :string
     =form.input :n_guests, label: "Number of guests:"
   =form.actions do
-    =form.action :submit
+    =form.action :submit, label: "Search"
