SQL and host model optimization

--- a/app/views/searches/show.html.haml
+++ b/app/views/searches/show.html.haml
@@ -4,4 +4,4 @@
 %p.alert Start_date: #{@search.s_date}, End_date: #{@search.e_date}, Number_of_guests: #{@search.n_guests}
 
 =render @hosts
-=will_paginate @pages
+=will_paginate @hosts
