--- a/app/assets/stylesheets/bootstrap_and_overrides.css.sass
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.sass
@@ -1,6 +1,9 @@
+@import url(http://fonts.googleapis.com/css?family=Dosis:600)
 @import "bootstrap"
+@import "bootstrap-responsive"
+
+*, input, button
+  font-family: 'Dosis', sans-serif
 
 body
   padding-top: 60px
-
-@import "bootstrap-responsive"
